--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1> Hola mundo </h1>
+<html>
+    <head>
+      <title>Página de Isabel</title>
+    </head>
+    <body>
+        <div id="divuno">
+            <h1><center>Programación Web</center></h1>
+            <br>
+            <img src="">           
+         </div>
+         <div id="cuerpo">
+            <p>La programación web sirve para crear páginas y sitios en Internet. Para poder hacerlo, se utilizan distintos lenguajes específicos que permiten desarrollar la creatividad humana. Estos lenguajes se fundamentan en la posibilidad de enlazar a través de hipervínculos distintas páginas web, lo que genera la interconexión que conocemos hoy como Internet. </p>
+            <p>Gracias a la programación web en Internet, los servidores comenzaron a adaptarse a estas nuevas tecnologías y lenguajes y mejorar sus servicios. Esto ha permitido la generación de un diálogo online con los usuarios, de manera que estos puedan recibir la información más rápido y eficientemente. </p>
+         </div>
+    </body>
+ 
+</html>
