--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <div id="divuno">
             <h1><center>Programación Web</center></h1>
             <br>
-            <img src="">           
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.azuanet.com%2Fdiseno-de-paginas-web%2Fdiferencia-entre-diseno-y-programacion-web.html&psig=AOvVaw3eWb5rLPvfo-yLSuWP0Rw_&ust=1675465931671000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCMCZv6_79_wCFQAAAAAdAAAAABAD" width="70px">           
          </div>
          <div id="cuerpo">
             <p>La programación web sirve para crear páginas y sitios en Internet. Para poder hacerlo, se utilizan distintos lenguajes específicos que permiten desarrollar la creatividad humana. Estos lenguajes se fundamentan en la posibilidad de enlazar a través de hipervínculos distintas páginas web, lo que genera la interconexión que conocemos hoy como Internet. </p>
