--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         </div>
          <div id="video">
             <video src="https://www.youtube.com/watch?v=nyz3CZSGZLE" width="500px"></video>
+            <br>
+            <a href="https://escuelafintech.com/programacion-web/">Más información en la siguiente página </a>
          </div>
     </body>
 </html>
