--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          <div id="video">
             <video src="https://www.youtube.com/watch?v=nyz3CZSGZLE" width="500px"></video>
             <br>
-            <a href="https://escuelafintech.com/programacion-web/">Más información en la siguiente página </a>
+            <a href="https://escuelafintech.com/programacion-web/" target="_blank">Más información en la siguiente página </a>
          </div>
     </body>
 </html>
