--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                   </ul>
         </div>
          <div id="video">
-            <video src="https://www.youtube.com/watch?v=nyz3CZSGZLE" width="500px"></video>
+            <iframe width="727" height="409" src="https://www.youtube.com/embed/nyz3CZSGZLE" title="HTML programación Web" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <br>
             <a href="https://escuelafintech.com/programacion-web/" target="_blank">Más información en la siguiente página </a>
          </div>
