--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+      <meta charset="UTF-8">
       <title>Página de Isabel</title>
     </head>
     <body>
@@ -21,7 +22,7 @@
                     <li>Supervisar y mejorar el rendimiento y capacidad de la página web.</li>
                   </ul>
         </div>
-         <div id="video">
+         <div id="video" align="center">
             <iframe width="727" height="409" src="https://www.youtube.com/embed/nyz3CZSGZLE" title="HTML programación Web" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <br>
             <a href="https://escuelafintech.com/programacion-web/" target="_blank">Más información en la siguiente página </a>
