--- a/index2.html
+++ b/index2.html
@@ -3,15 +3,23 @@
         <style>
             body{background-color: rgb(235, 222, 240);}
             a{color: rgb(138,43,226);
-              text-decoration: none;}
+              text-decoration: none;
+               font-size: 8px;}
             .roja{color: red;}
-            #azul{color:#4595CD;}           
+            #azul{color:#4595CD;
+                  font-family: 'Times New Roman', Times, serif;
+                  font-size: 12px;}           
         </style>
       <meta charset="UTF-8">
       <title>Página de Isabel</title>
     </head>
     <body>
       <a href="https://www.tecmartinez.edu.mx/" class="roja" id="azul">ITSMT</a>
+      <br>
+      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/e/historia" id="azul">Historia ITSMT</a>
+      <br
+      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/a/reglamento" id="azul">Reglamento escolar</a>
+      <br>
       <br>
       <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/alimentarias" class="roja">Ing. Industrias Alimentarias</a>
       <br>
@@ -23,12 +31,10 @@
       <br>
       <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/ambiental" class="roja">Ing. Ambiental</a>
       <br>
+      <br>
       <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/cle">CLE</a>
-      <br
-      <a href="http://200.77.51.94:8081/moodle/" id="azul">Moodle Institucional</a>
       <br>
-      <a href="http://200.77.51.94/sistema/" id="azul">SII</a>
-      <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/e/historia">Historia ITSMT</a>
+      <a href="http://200.77.51.94/sistema/">SII</a>
+      
     </body>
 </html>
