--- a/index2.html
+++ b/index2.html
@@ -4,11 +4,12 @@
             body{background-color: rgb(235, 222, 240);}
             a{color: rgb(138,43,226);
               text-decoration: none;
-               font-size: 8px;}
-            .roja{color: red;}
+               font-size: 17px;}
+            .roja{color: red;
+                font-size: 14px;}
             #azul{color:#4595CD;
                   font-family: 'Times New Roman', Times, serif;
-                  font-size: 12px;}           
+                  font-size: 20px;}           
         </style>
       <meta charset="UTF-8">
       <title>Página de Isabel</title>
@@ -17,7 +18,7 @@
       <a href="https://www.tecmartinez.edu.mx/" class="roja" id="azul">ITSMT</a>
       <br>
       <a href="https://www.tecmartinez.edu.mx/v1/plataforma/e/historia" id="azul">Historia ITSMT</a>
-      <br
+      <br>
       <a href="https://www.tecmartinez.edu.mx/v1/plataforma/a/reglamento" id="azul">Reglamento escolar</a>
       <br>
       <br>
