--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,10 @@
 <html>
     <head>
         <style>
-            body{background-color: rgb(235, 222, 240);}
+            body{background-color: rgb(242, 236, 245);}
+            h1{font-family: Georgia, 'Times New Roman', Times, serif;
+                color: brown;
+                text-align: center;}
             a{color: rgb(138,43,226);
               text-decoration: none;
                font-size: 17px;}
@@ -15,6 +18,10 @@
       <title>Página de Isabel</title>
     </head>
     <body>
+     <h1>Tecnológico de Martínez de la Torre</h1>
+     <br>
+     <br>
+     <br>
       <a href="https://www.tecmartinez.edu.mx/" class="roja" id="azul">ITSMT</a>
       <br>
       <a href="https://www.tecmartinez.edu.mx/v1/plataforma/e/historia" id="azul">Historia ITSMT</a>
