--- a/index2.html
+++ b/index2.html
@@ -7,12 +7,13 @@
                 text-align: center;}
             a{color: rgb(138,43,226);
               text-decoration: none;
-               font-size: 17px;}
+               font-size: 21px;}
             .roja{color: red;
-                font-size: 14px;}
+                font-size: 17px;
+                font-style: bold;}
             #azul{color:#4595CD;
                   font-family: 'Times New Roman', Times, serif;
-                  font-size: 20px;}           
+                  font-size: 26px;}           
         </style>
       <meta charset="UTF-8">
       <title>Página de Isabel</title>
