--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
                font-size: 21px;}
             .roja{color: red;
                 font-size: 17px;
-                font-style: bold;}
+                font-weight: bold;}
             #azul{color:#4595CD;
                   font-family: 'Times New Roman', Times, serif;
                   font-size: 26px;}           
@@ -23,27 +23,27 @@
      <br>
      <br>
      <br>
-      <a href="https://www.tecmartinez.edu.mx/" class="roja" id="azul">ITSMT</a>
+      <a href="https://www.tecmartinez.edu.mx/" target="_blank" class="roja" id="azul">ITSMT</a>
       <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/e/historia" id="azul">Historia ITSMT</a>
+      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/e/historia" target="_blank" id="azul">Historia ITSMT</a>
       <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/a/reglamento" id="azul">Reglamento escolar</a>
-      <br>
-      <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/alimentarias" class="roja">Ing. Industrias Alimentarias</a>
-      <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/computacionales" class="roja">Ing. Sistemas Computacionales</a>
-      <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/mecatronica" class="roja">Ing. Mecatrónica</a>
-      <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/empresarial" class="roja">Ing. Gestión Empresarial</a>
-      <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/ambiental" class="roja">Ing. Ambiental</a>
+      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/a/reglamento" target="_blank" id="azul">Reglamento escolar</a>
       <br>
       <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/cle">CLE</a>
+      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/alimentarias" target="_blank" class="roja">Ing. Industrias Alimentarias</a>
       <br>
-      <a href="http://200.77.51.94/sistema/">SII</a>
+      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/computacionales" target="_blank" class="roja">Ing. Sistemas Computacionales</a>
+      <br>
+      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/mecatronica" target="_blank" class="roja">Ing. Mecatrónica</a>
+      <br>
+      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/empresarial" target="_blank" class="roja">Ing. Gestión Empresarial</a>
+      <br>
+      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/ambiental" target="_blank" class="roja">Ing. Ambiental</a>
+      <br>
+      <br>
+      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/cle" target="_blank">CLE</a>
+      <br>
+      <a href="http://200.77.51.94/sistema/" target="_blank">SII</a>
       
     </body>
 </html>
