--- a/index2.html
+++ b/index2.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <style>
-            body{background-color: rgb(242, 236, 245);}
+            body{background-color: rgb(234, 234, 235);}
             h1{font-family: Georgia, 'Times New Roman', Times, serif;
-                color: brown;
+                color: rgb(46, 109, 161);
                 text-align: center;}
             a{color: rgb(138,43,226);
               text-decoration: none;
