--- a/index2.html
+++ b/index2.html
@@ -1,19 +1,18 @@
 <html>
     <head>
         <style>
-            body{background-color: rgb(234, 234, 235);}
-            h1{font-family: Georgia, 'Times New Roman', Times, serif;
-                color: rgb(46, 109, 161);
+            body{background-color: rgb(125, 125, 128);}
+            h1{font-family:Arial, Helvetica, sans-serif;
+                color: rgb(2, 7, 12);
                 text-align: center;}
-            a{color: rgb(138,43,226);
+            a{color: rgb(255, 255, 255);
               text-decoration: none;
                font-size: 21px;}
             .roja{color: red;
-                font-size: 17px;
-                font-weight: bold;}
+                font-size: 17px;}
             #azul{color:#4595CD;
-                  font-family: 'Times New Roman', Times, serif;
-                  font-size: 26px;}           
+                  font-size: 26px;
+                  font-weight: bold;}           
         </style>
       <meta charset="UTF-8">
       <title>Página de Isabel</title>
