--- a/index2.html
+++ b/index2.html
@@ -1,18 +1,21 @@
 <html>
     <head>
         <style>
-            body{background-color: rgb(125, 125, 128);}
-            h1{font-family:Arial, Helvetica, sans-serif;
-                color: rgb(2, 7, 12);
+            body{font-size: 15px;
+                text-align: justify;
+                font-family:Arial, Helvetica, sans-serif;}
+            h1{color: rgb(65, 96, 199);
                 text-align: center;}
-            a{color: rgb(255, 255, 255);
-              text-decoration: none;
-               font-size: 21px;}
+            h2{color: rgb(65, 96, 199);
+                text-align: center;}
+            a{text-decoration: none;
+              font-size: 21px;
+              text-align: left;}
             .roja{color: red;
                 font-size: 17px;}
             #azul{color:#4595CD;
                   font-size: 26px;
-                  font-weight: bold;}           
+                  font-weight: bold;}               
         </style>
       <meta charset="UTF-8">
       <title>Página de Isabel</title>
@@ -22,22 +25,29 @@
      <br>
      <br>
      <br>
-      <a href="https://www.tecmartinez.edu.mx/" target="_blank" class="roja" id="azul">ITSMT</a>
+     <p>Tenemos un compromiso por ser parte fundamental en la construcción de “Ciudadanos del Mundo”, con las herramientas para resolver cualquier reto; pues estamos convencidos que “desde la educación se puede hacer cualquier cosa”, mi llamado es a seguir comprometidos con esta institución y lo que representa para Martínez de la Torre, seguir fortaleciéndonos como la mejor institución en Educación Superior de la Región.</p>
+     <div id="divinfo">
+     <a href="https://www.tecmartinez.edu.mx/" target="_blank" class="roja" id="azul">ITSMT</a>
       <br>
       <a href="https://www.tecmartinez.edu.mx/v1/plataforma/e/historia" target="_blank" id="azul">Historia ITSMT</a>
       <br>
       <a href="https://www.tecmartinez.edu.mx/v1/plataforma/a/reglamento" target="_blank" id="azul">Reglamento escolar</a>
+      </div>
       <br>
       <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/alimentarias" target="_blank" class="roja">Ing. Industrias Alimentarias</a>
+      <div id="carreras">
+      <h2>Oferta de carreras</h2>
       <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/computacionales" target="_blank" class="roja">Ing. Sistemas Computacionales</a>
+      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/alimentarias" target="_blank" >Ing. Industrias Alimentarias</a>
       <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/mecatronica" target="_blank" class="roja">Ing. Mecatrónica</a>
+      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/computacionales" target="_blank">Ing. Sistemas Computacionales</a>
       <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/empresarial" target="_blank" class="roja">Ing. Gestión Empresarial</a>
+      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/mecatronica" target="_blank" >Ing. Mecatrónica</a>
       <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/ambiental" target="_blank" class="roja">Ing. Ambiental</a>
+      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/empresarial" target="_blank" ">Ing. Gestión Empresarial</a>
+      <br>
+      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/ambiental" target="_blank" >Ing. Ambiental</a>
+      </div>
       <br>
       <br>
       <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/cle" target="_blank">CLE</a>
