--- a/index2.html
+++ b/index2.html
@@ -4,26 +4,23 @@
             body{font-size: 15px;
                 text-align: justify;
                 font-family:Arial, Helvetica, sans-serif;}
-            h1{color: rgb(65, 96, 199);
+            h1{color: rgb(58, 86, 177);
                 text-align: center;}
-            h2{color: rgb(65, 96, 199);
-                text-align: center;}
+            h2{text-align: center;}
             a{text-decoration: none;
               font-size: 21px;
               text-align: left;}
             .roja{color: red;
-                font-size: 17px;}
+                font-size: 17px;
+                font-style: italic;}
             #azul{color:#4595CD;
-                  font-size: 26px;
-                  font-weight: bold;}               
+                  font-size: 26px;}               
         </style>
       <meta charset="UTF-8">
       <title>Página de Isabel</title>
     </head>
     <body>
      <h1>Tecnológico de Martínez de la Torre</h1>
-     <br>
-     <br>
      <br>
      <p>Tenemos un compromiso por ser parte fundamental en la construcción de “Ciudadanos del Mundo”, con las herramientas para resolver cualquier reto; pues estamos convencidos que “desde la educación se puede hacer cualquier cosa”, mi llamado es a seguir comprometidos con esta institución y lo que representa para Martínez de la Torre, seguir fortaleciéndonos como la mejor institución en Educación Superior de la Región.</p>
      <div id="divinfo">
@@ -35,7 +32,7 @@
       </div>
       <br>
       <br>
-      <div id="carreras">
+      <div id="carreras" class="roja">
       <h2>Oferta de carreras</h2>
       <br>
       <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/alimentarias" target="_blank" >Ing. Industrias Alimentarias</a>
@@ -49,8 +46,11 @@
       <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/ambiental" target="_blank" >Ing. Ambiental</a>
       </div>
       <br>
+      <h2>Cursos de inglés</h2>
       <br>
       <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/cle" target="_blank">CLE</a>
+      <br>
+      <h2>Sistema para estudiantes</h2>
       <br>
       <a href="http://200.77.51.94/sistema/" target="_blank">SII</a>
       
