--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
             a{text-decoration: none;
               font-size: 21px;
               text-align: left;}
-            .roja{color: red;
+            .roja a #carreras{color: red;
                 font-size: 17px;
                 font-style: italic;}
             #azul{color:#4595CD;
