--- a/etiquetas.html
+++ b/etiquetas.html
@@ -9,7 +9,8 @@
             h2{text-align: center;}
             a{text-decoration: none;
               font-size: 21px;
-              text-align: left;}
+              text-align: left;
+              color: black;}
             .roja #carreras a{color: red;
                 font-size: 17px;
                 font-style: italic;}
