--- a/etiquetas.html
+++ b/etiquetas.html
@@ -11,7 +11,7 @@
               font-size: 21px;
               text-align: left;
               color: black;}
-            #carreras .roja a{color: red;
+            .roja{color: red;
                 font-size: 17px;
                 font-style: italic;}
             #azul{color:#4595CD;
