--- a/etiquetas.html
+++ b/etiquetas.html
@@ -33,12 +33,12 @@
       </div>
       <br>
       <br>
-      <div id="carreras">
+      <div id="carreras" class="roja">
       <h2>Oferta de carreras</h2>
       <br>
       <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/alimentarias" target="_blank" >Ing. Industrias Alimentarias</a>
       <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/computacionales" target="_blank" class="roja">Ing. Sistemas Computacionales</a>
+      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/computacionales" target="_blank">Ing. Sistemas Computacionales</a>
       <br>
       <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/mecatronica" target="_blank" >Ing. Mecatrónica</a>
       <br>
