--- a/etiquetas.html
+++ b/etiquetas.html
@@ -15,7 +15,11 @@
                 font-size: 17px;
                 font-style: italic;}
             #azul{color:#4595CD;
-                  font-size: 26px;}               
+                  font-size: 26px;}     
+                  
+            a:hover {
+              font-size: 25px;
+            }
         </style>
       <meta charset="UTF-8">
       <title>Página de Isabel</title>
@@ -33,7 +37,7 @@
       </div>
       <br>
       <br>
-      <div id="carreras" class="roja">
+      <div id="carreras" >
       <h2>Oferta de carreras</h2>
       <br>
       <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/alimentarias" target="_blank" >Ing. Industrias Alimentarias</a>
@@ -53,7 +57,7 @@
       <br>
       <h2>Sistema para estudiantes</h2>
       <br>
-      <a href="http://200.77.51.94/sistema/" target="_blank">SII</a>
+      <a href="http://200.77.51.94/sistema/" target="_blank" class="roja">SII</a>
       
     </body>
 </html>
