--- a/etiquetas.html
+++ b/etiquetas.html
@@ -1,56 +1,52 @@
 <html>
     <head>
         <style>
-            body{font-size: 15px;
+            p{
                 text-align: justify;
-                font-family:Arial, Helvetica, sans-serif;}
-            h1{color: rgb(58, 86, 177);
-                text-align: center;}
-            h2{text-align: center;}
-            a{text-decoration: none;
-              font-size: 21px;
-              text-align: left;
-              color: black;}
-            .roja{color: red;
+            }
+            a{
+                color: #25455c;
+            }
+            #azul{
+                color:#4595CD);
+            }
+            roja{
+                color: red;
                 font-size: 17px;
-                font-style: italic;}
-            #azul{color:#4595CD;
-                  font-size: 26px;}     
-                  
-            a:hover {
-              font-size: 25px;
+                font-style: italic;               
             }
         </style>
       <meta charset="UTF-8">
-      <title>Página de Isabel</title>
+      <title>Página de etiquetas</title>
     </head>
-    <body>
-     <h1>Tecnológico de Martínez de la Torre</h1>
-     <br>
-     <p>Tenemos un compromiso por ser parte fundamental en la construcción de “Ciudadanos del Mundo”, con las herramientas para resolver cualquier reto; pues estamos convencidos que “desde la educación se puede hacer cualquier cosa”, mi llamado es a seguir comprometidos con esta institución y lo que representa para Martínez de la Torre, seguir fortaleciéndonos como la mejor institución en Educación Superior de la Región.</p>
-     <div id="divinfo">
-     <a href="https://www.tecmartinez.edu.mx/" target="_blank" class="roja" id="azul">ITSMT</a>
-      <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/e/historia" target="_blank" id="azul">Historia ITSMT</a>
-      <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/a/reglamento" target="_blank" id="azul">Reglamento escolar</a>
-      </div>
-      <br>
-      <br>
-      <div id="carreras" >
-      <h2>Oferta de carreras</h2>
-      <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/alimentarias" target="_blank" >Ing. Industrias Alimentarias</a>
-      <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/computacionales" target="_blank">Ing. Sistemas Computacionales</a>
-      <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/mecatronica" target="_blank" >Ing. Mecatrónica</a>
-      <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/empresarial" target="_blank" ">Ing. Gestión Empresarial</a>
-      <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/ambiental" target="_blank" >Ing. Ambiental</a>
-      </div>
-      <br>
+    <body>    
+        <h1>Tecnológico de Martínez de la Torre</h1>
+        <br>
+        <p>Tenemos un compromiso por ser parte fundamental en la construcción de “Ciudadanos del Mundo”, con las herramientas para resolver cualquier reto; pues estamos convencidos que “desde la educación se puede hacer cualquier cosa”, mi llamado es a seguir comprometidos con esta institución y lo que representa para Martínez de la Torre, seguir fortaleciéndonos como la mejor institución en Educación Superior de la Región.</p>
+        <br>
+        <p>Visita los siguientes enlaces para más información</p>
+        <div>
+            <a href="https://www.tecmartinez.edu.mx/" target="_blank" class="roja" id="azul">ITSMT</a>
+            <br>
+            <a href="https://www.tecmartinez.edu.mx/v1/plataforma/e/historia" target="_blank" id="azul">Historia ITSMT</a>
+            <br>
+            <a href="https://www.tecmartinez.edu.mx/v1/plataforma/a/reglamento" target="_blank" id="azul">Reglamento escolar</a>
+            </div>
+        </div>
+        <div>
+            <h2>Oferta de carreras</h2>
+            <br>
+            <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/alimentarias" target="_blank" class="roja">Ing. Industrias Alimentarias</a>
+            <br>
+            <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/computacionales" target="_blank">Ing. Sistemas Computacionales</a>
+            <br>
+            <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/mecatronica" target="_blank" >Ing. Mecatrónica</a>
+            <br>
+            <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/empresarial" target="_blank" ">Ing. Gestión Empresarial</a>
+            <br>
+            <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/ambiental" target="_blank" >Ing. Ambiental</a>
+        </div>
+        <br>
       <h2>Cursos de inglés</h2>
       <br>
       <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/cle" target="_blank">CLE</a>
@@ -58,6 +54,6 @@
       <h2>Sistema para estudiantes</h2>
       <br>
       <a href="http://200.77.51.94/sistema/" target="_blank" class="roja">SII</a>
-      
+
     </body>
 </html>
