--- a/etiqueta.html
+++ b/etiqueta.html
@@ -9,9 +9,9 @@
                 ;
             }
             #azul{
-                color:#4595CD);
+                color:#5fdee7);
             }
-            roja{
+            .roja{
                 color: red;
                 font-size: 17px;
                 font-style: italic;               
