--- a/etiqueta.html
+++ b/etiqueta.html
@@ -9,7 +9,7 @@
                 ;
             }
             #azul{
-                color:#5fdee7);
+                color:#5fdee7;
             }
             .roja{
                 color: red;
