--- a/etiqueta.html
+++ b/etiqueta.html
@@ -16,6 +16,9 @@
                 font-size: 17px;
                 font-style: italic;               
             }
+            #divuno .roja a{
+                color: #db1d8c;
+            }
         </style>
       <meta charset="UTF-8">
       <title>Página de etiquetas</title>
@@ -26,10 +29,10 @@
         <p>Tenemos un compromiso por ser parte fundamental en la construcción de “Ciudadanos del Mundo”, con las herramientas para resolver cualquier reto; pues estamos convencidos que “desde la educación se puede hacer cualquier cosa”, mi llamado es a seguir comprometidos con esta institución y lo que representa para Martínez de la Torre, seguir fortaleciéndonos como la mejor institución en Educación Superior de la Región.</p>
         <br>
         <p>Visita los siguientes enlaces para más información</p>
-        <div>
+        <div id="divuno">
             <a href="https://www.tecmartinez.edu.mx/" target="_blank" class="roja" id="azul">ITSMT</a>
             <br>
-            <a href="https://www.tecmartinez.edu.mx/v1/plataforma/e/historia" target="_blank" id="azul">Historia ITSMT</a>
+            <a href="https://www.tecmartinez.edu.mx/v1/plataforma/e/historia" target="_blank" class="roja">Historia ITSMT</a>
             <br>
             <a href="https://www.tecmartinez.edu.mx/v1/plataforma/a/reglamento" target="_blank" id="azul">Reglamento escolar</a>
             </div>
