--- a/etiqueta.html
+++ b/etiqueta.html
@@ -16,7 +16,7 @@
                 font-size: 17px;
                 font-style: italic;               
             }
-            #divuno .roja a{
+            #divuno .rosa a{
                 color: #db1d8c;
             }
         </style>
@@ -32,7 +32,7 @@
         <div id="divuno">
             <a href="https://www.tecmartinez.edu.mx/" target="_blank" class="roja" id="azul">ITSMT</a>
             <br>
-            <a href="https://www.tecmartinez.edu.mx/v1/plataforma/e/historia" target="_blank" class="roja">Historia ITSMT</a>
+            <a href="https://www.tecmartinez.edu.mx/v1/plataforma/e/historia" target="_blank" class="rosa">Historia ITSMT</a>
             <br>
             <a href="https://www.tecmartinez.edu.mx/v1/plataforma/a/reglamento" target="_blank" id="azul">Reglamento escolar</a>
             </div>
