--- a/etiqueta.html
+++ b/etiqueta.html
@@ -32,7 +32,7 @@
         <div id="divuno">
             <a href="https://www.tecmartinez.edu.mx/" target="_blank" class="roja" id="azul">ITSMT</a>
             <br>
-            <a href="https://www.tecmartinez.edu.mx/v1/plataforma/e/historia" target="_blank" class="rosa">Historia ITSMT</a>
+            <a href="https://www.tecmartinez.edu.mx/v1/plataforma/e/historia" target="_blank" id="azul">Historia ITSMT</a>
             <br>
             <a href="https://www.tecmartinez.edu.mx/v1/plataforma/a/reglamento" target="_blank" id="azul">Reglamento escolar</a>
             </div>
@@ -40,7 +40,7 @@
         <div>
             <h2>Oferta de carreras</h2>
             <br>
-            <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/alimentarias" target="_blank" class="roja">Ing. Industrias Alimentarias</a>
+            <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/alimentarias" target="_blank" class="rosa">Ing. Industrias Alimentarias</a>
             <br>
             <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/computacionales" target="_blank">Ing. Sistemas Computacionales</a>
             <br>
