--- a/etiqueta.html
+++ b/etiqueta.html
@@ -16,9 +16,7 @@
                 font-size: 17px;
                 font-style: italic;               
             }
-            #divuno .rosa a{
-                color: #db1d8c;
-            }
+            
         </style>
       <meta charset="UTF-8">
       <title>Página de etiquetas</title>
@@ -40,7 +38,7 @@
         <div id="divuno">
             <h2>Oferta de carreras</h2>
             <br>
-            <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/alimentarias" target="_blank" class="rosa">Ing. Industrias Alimentarias</a>
+            <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/alimentarias" target="_blank">Ing. Industrias Alimentarias</a>
             <br>
             <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/computacionales" target="_blank">Ing. Sistemas Computacionales</a>
             <br>
@@ -53,7 +51,7 @@
         <br>
       <h2>Cursos de inglés</h2>
       <br>
-      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/cle" target="_blank">CLE</a>
+      <a href="https://www.tecmartinez.edu.mx/v1/plataforma/g/cle" target="_blank" class="roja">CLE</a>
       <br>
       <h2>Sistema para estudiantes</h2>
       <br>
