--- a/contenedores.html
+++ b/contenedores.html
@@ -3,11 +3,11 @@
         <style>
             p{text-align: justify;}
             #divuno{
+                background-color: bisque;
                 border: 0px;
                 width: 500px;
-                margin: 10%;
+                margin: 5%;
                 align-items: center;
-  padding: 10%;
             }
         </style>
         <meta charset="UTF-8">
@@ -16,7 +16,7 @@
     <body>        
         <h1>Programación web</h1>
         <div id="divuno">
-            <p>define la creación de sitios web para Internet o una intranet. Para conseguirlo se hace uso de tecnologías del lado del servidor y del cliente que conllevan unos procesos de base de datos y el uso de un navegador para realizar determinadas tareas o mostrar información.</p>
+            <p>Define la creación de sitios web para Internet o una intranet. Para conseguirlo se hace uso de tecnologías del lado del servidor y del cliente que conllevan unos procesos de base de datos y el uso de un navegador para realizar determinadas tareas o mostrar información.</p>
         </div>
     </body>
 </html>
