--- a/contenedores.html
+++ b/contenedores.html
@@ -6,8 +6,8 @@
                 background-color: bisque;
                 border: 0px;
                 width: 500px;
-                margin: 5%;
-                align-items: center;
+                margin: 2%;
+                padding: 2%;
             }
         </style>
         <meta charset="UTF-8">
@@ -16,7 +16,7 @@
     <body>        
         <h1>Programación web</h1>
         <div id="divuno">
-            <p>Define la creación de sitios web para Internet o una intranet. Para conseguirlo se hace uso de tecnologías del lado del servidor y del cliente que conllevan unos procesos de base de datos y el uso de un navegador para realizar determinadas tareas o mostrar información.</p>
+            <p>dDefine la creación de sitios web para Internet o una intranet. Para conseguirlo se hace uso de tecnologías del lado del servidor y del cliente que conllevan unos procesos de base de datos y el uso de un navegador para realizar determinadas tareas o mostrar información.</p>
         </div>
     </body>
 </html>
