--- a/contenedores.html
+++ b/contenedores.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <style>
@@ -6,8 +7,9 @@
                 background-color: bisque;
                 border: 0px;
                 width: 500px;
-                margin: 2%;
+                margin: 0 auto;
                 padding: 2%;
+                position:;
             }
         </style>
         <meta charset="UTF-8">
@@ -16,7 +18,7 @@
     <body>        
         <h1>Programación web</h1>
         <div id="divuno">
-            <p>dDefine la creación de sitios web para Internet o una intranet. Para conseguirlo se hace uso de tecnologías del lado del servidor y del cliente que conllevan unos procesos de base de datos y el uso de un navegador para realizar determinadas tareas o mostrar información.</p>
+            <p>Define la creación de sitios web para Internet o una intranet. Para conseguirlo se hace uso de tecnologías del lado del servidor y del cliente que conllevan unos procesos de base de datos y el uso de un navegador para realizar determinadas tareas o mostrar información.</p>
         </div>
     </body>
 </html>
