--- a/contenedores.html
+++ b/contenedores.html
@@ -2,9 +2,20 @@
 <html>
     <head>
         <style>
-            p{text-align: justify;}
+            p{text-align: justify;
+              font-family: Verdana, Geneva, Tahoma, sans-serif;}
+            h1{
+                text-align: center;
+                color: #70426c;
+                font-family: 'Times New Roman', Times, serif;
+            }
+            h1{
+                text-align: center;
+                color: #70426c;
+                font-family: 'Times New Roman', Times, serif;
+            }
             #divuno{
-                background-color: bisque;
+                background-color: rgb(221, 215, 224);
                 border: 0px;
                 width: 500px;
                 margin: 0 auto;
@@ -19,6 +30,15 @@
         <h1>Programación web</h1>
         <div id="divuno">
             <p>Define la creación de sitios web para Internet o una intranet. Para conseguirlo se hace uso de tecnologías del lado del servidor y del cliente que conllevan unos procesos de base de datos y el uso de un navegador para realizar determinadas tareas o mostrar información.</p>
+        </div>
+        <h2>Lenguajes de programación web</h2>
+        <div id="divlenguajes">
+            <div>
+            </div>
+            <div>
+            </div>
+            <div>
+            </div>
         </div>
     </body>
 </html>
