--- a/contenedores.html
+++ b/contenedores.html
@@ -7,20 +7,47 @@
             h1{
                 text-align: center;
                 color: #70426c;
-                font-family: 'Times New Roman', Times, serif;
+                font-family: Arial, Helvetica, sans-serif;
             }
-            h1{
+            h2{
                 text-align: center;
                 color: #70426c;
-                font-family: 'Times New Roman', Times, serif;
+                font-family: Arial, Helvetica, sans-serif;
             }
+            
             #divuno{
                 background-color: rgb(221, 215, 224);
                 border: 0px;
                 width: 500px;
                 margin: 0 auto;
                 padding: 2%;
-                position:;
+            }
+            #divlenguaje1{
+                background-color: rgb(184, 182, 185);
+                border: 0px;
+                width: 500px;
+                height: 100px;
+                margin: 0 auto;
+                padding: 2%;
+                float: left;
+            }
+            #divlenguaje2{
+                background-color: rgb(233, 232, 233);
+                border: 0px;
+                width: 500px;
+                height: 100px;
+                margin: 0 auto;
+                padding: 2%;
+                float: right;
+            }
+            #divlenguaje3{
+                background-color: rgb(233, 232, 233);
+                border: 0px;
+                width: 500px;
+                height: 100px;
+                margin: 0 auto;
+                padding: 2%;
+                float: right;
             }
         </style>
         <meta charset="UTF-8">
@@ -33,11 +60,11 @@
         </div>
         <h2>Lenguajes de programación web</h2>
         <div id="divlenguajes">
-            <div>
+            <div id="lenguaje1">
             </div>
-            <div>
+            <div id="lenguaje2">
             </div>
-            <div>
+            <div id="lenguaje3">
             </div>
         </div>
     </body>
