--- a/contenedores.html
+++ b/contenedores.html
@@ -22,7 +22,7 @@
                 margin: 0 auto;
                 padding: 2%;
             }
-            #divlenguaje1{
+            .divlenguaje1{
                 background-color: rgb(184, 182, 185);
                 border: 0px;
                 width: 500px;
@@ -31,7 +31,7 @@
                 padding: 2%;
                 float: left;
             }
-            #divlenguaje2{
+            .divlenguaje2{
                 background-color: rgb(233, 232, 233);
                 border: 0px;
                 width: 500px;
@@ -40,7 +40,7 @@
                 padding: 2%;
                 float: right;
             }
-            #divlenguaje3{
+            .divlenguaje3{
                 background-color: rgb(233, 232, 233);
                 border: 0px;
                 width: 500px;
@@ -60,11 +60,11 @@
         </div>
         <h2>Lenguajes de programación web</h2>
         <div id="divlenguajes">
-            <div id="lenguaje1">
+            <div class="lenguaje1">
             </div>
-            <div id="lenguaje2">
+            <div class="lenguaje2">
             </div>
-            <div id="lenguaje3">
+            <div class="lenguaje3">
             </div>
         </div>
     </body>
