--- a/contenedores.html
+++ b/contenedores.html
@@ -29,7 +29,6 @@
                 height: 100px;
                 margin: 0 auto;
                 padding: 2%;
-                float: left;
             }
             .divlenguaje2{
                 background-color: rgb(233, 232, 233);
@@ -38,7 +37,6 @@
                 height: 100px;
                 margin: 0 auto;
                 padding: 2%;
-                float: right;
             }
             .divlenguaje3{
                 background-color: rgb(233, 232, 233);
@@ -47,7 +45,10 @@
                 height: 100px;
                 margin: 0 auto;
                 padding: 2%;
-                float: right;
+            }
+            #divlenguajes{
+                display: flex;
+                justify-content: center;
             }
         </style>
         <meta charset="UTF-8">
@@ -60,11 +61,11 @@
         </div>
         <h2>Lenguajes de programación web</h2>
         <div id="divlenguajes">
-            <div class="lenguaje1">
+            <div class="divlenguaje1">
             </div>
-            <div class="lenguaje2">
+            <div class="divlenguaje2">
             </div>
-            <div class="lenguaje3">
+            <div class="divlenguaje3">
             </div>
         </div>
     </body>
