--- a/contenedores.html
+++ b/contenedores.html
@@ -34,7 +34,7 @@
                 height: 500px;
                 margin: 0 auto;
                 padding: 2%;
-                align-items: center;
+                align-self: center;
             }
             .divlenguaje2{
                 background-color: rgb(207, 205, 207);
@@ -43,7 +43,7 @@
                 height: 500px;
                 margin: 0 auto;
                 padding: 2%;
-                align-items: center;
+                align-self: center;
             }
             .divlenguaje3{
                 background-color: rgb(233, 232, 233);
@@ -52,7 +52,7 @@
                 height: 500px;
                 margin: 0 auto;
                 padding: 2%;
-                align-items: center;
+                align-self: center;
             }
             #divlenguajes{
                 display: flex;
