--- a/contenedores.html
+++ b/contenedores.html
@@ -18,6 +18,7 @@
             h3{
                 color: #70426c;
                 font-family: Arial, Helvetica, sans-serif;
+                text-align: center;
             }
             
             #divuno{
